k8s/05-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: demo
spec:
  selector:
    app: api
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
