k8s/07-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: demo
spec:
  selector:
    app: ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
